adds timeline feature + model tests
